# django-manager

./: .gitignore  pyproject.toml
projectmanager/: pytest.ini
projectmanager/app_user/: models.py  serializers.py  tests.py  urls.py  views.py
projectmanager/app_user/migrations/: 0001_initial.py  0002_remove_user_last_login_remove_user_password.py  0003_alter_user_table.py
projectmanager/projectmanager/: settings.py  urls.py
